OpenGL on GMA4500MHD
Hello, I'm facing a strange behavior on my (rather old) laptop. Processor: Intel Celeron SU2300 graphics: GMA4500MHD. OS: Arch Linux
Trying to run the program prusa-slicer, the model 3d view does not show anything. I first think about a problem with that software. but fresh compiled with all dependencies gave the same result. Long history sort, using mesa 20.2.3, the program runs as expected. Using 20.3.0 (20.3.x, indeed) does not.
Could be a bug? Can a further diagnose anything else?
Thank you.