glsl/nir: emit exact fmin/fmax

Some piglit tests (such as fs-nan-builtin-max.shader_test), prusa-slicer
and bgfx's assao example assumes min()/max() handles NaNs.

prusa-slider: https://gitlab.freedesktop.org/mesa/mesa/-/issues/4254

Signed-off-by: Rhys Perry <pendingchaos02@gmail.com>